--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-/XilinxISE/*
-!*.gise
-!*.xise
-!/XilinxISE/vsource/*
-!/XilinxISE/vtest/*
-!/XilinxISE/iseconfig/*
-!/XilinxISE/UART_Test.gise
-!/XilinxISE/UART_Test.xise
+/*
+!src/
